--- a/web_maven/pom.xml
+++ b/web_maven/pom.xml
@@ -21,9 +21,19 @@
 	   </dependency>
 	    <dependency>
 		<groupId>org.atu</groupId>
-		<artifactId>atureport</artifactId>
+		<artifactId>atur2</artifactId>
 		<version>2.1</version>
 	   </dependency>
+	   <dependency>
+		<groupId>org.atu</groupId>
+		<artifactId>atur1</artifactId>
+		<version>5.1.1</version>
+	   </dependency>
+	   <dependency>
+	<groupId>net.sourceforge.jexcelapi</groupId>
+	<artifactId>jxl</artifactId>
+	<version>2.6</version>
+</dependency>
 	 </dependencies>
    <build>
 		<plugins>
